# pisces

./: BUGS  CMakeLists.txt  INSTALL  NOTICE  README  README.md
doc/: README  chap.tmac  macros.tmac  release.notes
doc/cards/: Makefile  c_check.ms  c_comment.ms  c_contact.ms  c_contour.ms  c_doping.ms  c_elec.ms  c_elim.ms  c_end.ms  c_extract.ms  c_impact.ms  c_include.ms  c_interface.ms  c_load.ms  c_log.ms  c_mater.ms  c_mesh.ms  c_method.ms  c_models.ms  c_option.ms  c_plot1d.ms  c_plot2d.ms  c_print.ms  c_region.ms  c_regrid.ms  c_solve.ms  c_spread.ms  c_symb.ms  c_title.ms  c_vector.ms  c_xmesh.ms  end.ms  overview.ms  paper-nr.cat  paper-tr  toc-make  toc-page  toc.tr
doc/examples/: Makefile.ex  pn1a.in  pn2a.in  pn2aa.in  pn3a.in  pn4.in  pn8.in  pn9a.in
doc/manual/: chap1.ms  chap2.ms  chap3.ms  chap4.ms  cover.ms
doc/notes/: impact.note  param.note  surfmob.note  tfldmob.ms  tfldmob.ps  usermob1.note
examples/bipmesh/: Imakefile  Makefile
examples/bipmesh/example1/: .defaultmesh  .tempfile  Imakefile  Makefile  example1.out
examples/iggi/: Imakefile  Makefile  README  skel.demo  tri.demo  tri.pisces
examples/mosmesh/: Imakefile  Makefile  example1.out
examples/pisces/: Makefile
pdf_manuals/: README
src/: CMakeLists.txt
src/edline/: CMakeLists.txt  Makefile  README  dot.inputrc  edline_c.c  edline_f.c  rdline_c.c  rdline_f.f
src/genii3/: CMakeLists.txt  Makefile  censtr.f  clsfl.f  cmpch.f  common.inc  cpack.f  fexist.f  findc.f  gener.f  genicm.inc  genidf.inc  genien.f  genii.f  genii3.f  genilu.f  genipm.f  gerst.f  getln.f  getrl.f  gnget1.f  gniend.f  gnincl.f  gtval.f  gtxval.f  initl.f  mapch.f  opnfl.f  outpt.f  parky.f  parse.f  redln.f  scomp.f  setvl.f  skipc.f
src/pisces/: CMakeLists.txt  Imakefile.2nd  Makefile  acanal.f  adjstk.h  adjtmp.h  bitmp.h  blank.h  breakdown.f  clock.f  difftmp.h  disct.f  doping.f  doptmp.h  emaco.h  eritco.h  erite.f  extract.f  extrtmp.h  filopncls.f  flowline.f  flowtmp.h  igitmp.h  impact.f  impact.h  incfil.f  interface.f  key.h  loadsol.f  logunt.h  machplot.f  mc.f  mcintfc.f  md.f  meshgen.f  meshio.f  meshrect.f  method.f  misc.f  mobil.f  (+53 more)
src/plotcap/: CMakeLists.txt  Makefile
src/plotcap/gplot/: CMakeLists.txt  Makefile  README  al_alu18.h  al_dis18.c  al_dis18.h  al_tst18.c  auxfns.h  get_txt.c  glexs.c  gp_alu12.c  gp_area.c  gp_caps.h  gp_clip.c  gp_com.h  gp_def.h  gp_fmp.c  gp_gmode.c  gp_gplot.h  gp_gplot2.c  gp_gpmisc.c  gp_gpwork.c  gp_lines.c  gp_mis12.h  gp_pclocs.h  gp_pclocs.tmp  gp_pdev.c  gp_pfil.c  gp_pix.c  gp_prast.c  gp_rand.c  gp_setcap.c  gp_setup.c  gp_vers.tmp  gp_xform.c  gplot.cat  gplot.h  gplot.man  gplot2.cat  gplot2.man  (+16 more)
src/sysf77lib/: CMakeLists.txt  Makefile  runtst.sh  xdate_bsd.f  xdate_def.f  xdate_sgi.c  xdate_vms.for  xexit_bsd.f  xexit_def.f  xexit_sgi.f  xgeten_bsd.f  xgeten_def.f  xgeten_sgi.c  xgtarg_bsd.f  xgtarg_def.f  xgtarg_hpux.f  xgtarg_sgi.f  xgtarg_vms.for  xmktmp_bsd.c  xmktmp_def.f  xmktmp_sgi.c  xtest.f  xtimer_bsd.f  xtimer_def.f  xtimer_sgi.c  xtimer_vms.for
src/utils/: CMakeLists.txt
src/utils/bipmesh/src/: CMakeLists.txt  Makefile  asciicalc.c  bipmesh.cat  bipmesh.man  calc_junc.c  calcnode.c  calcratio.c  calcspacing.c  computesubstratetype.c  depl_width.c  dmax.c  dmin.c  doublenode.c  dump_info.c  dump_stride.c  eval.c  expr.h  findindex.c  generate_deck.c  get3dinfo.c  get3dprofiles.c  get_info.c  getdef3dprofiles.c  getdefprofiles.c  getprofiles.c  lexical.c  main.c  panic.c  parse.c  piscesnodegen.c  preal.c  read_defdop.c  read_deffloat.c  read_defreal.c  read_dop.c  read_float.c  read_real.c  reads3as.c  reduce.c  (+11 more)
src/utils/ig2image/src/: CMakeLists.txt  Makefile  bound.h  fill_grid.c  get_graphsize.c  ig2image.cat  ig2image.man  incfil.c  main.c  make_grid.c  makeframe.c  more_imp.h  mylog.c  newget_solval.c  readp2.f  readp2.f.parameterized  s4incf.c  scan_s4file.c  window.c  write_imagetool.c
src/utils/iggi/skel/: CMakeLists.txt  Makefile  Makefile.cc  README  alpha.c  alpha.h  check.c  dbase.c  dbase.h  geom.c  griph.c  griph.h  iltty.c  main.c  menu.c  menu.h  meshio.c  skel.cat  skel.man  skelp.c  skelp.h  stalloc.c  sys.c  u2.c  udb.c  udb.h  user.c
src/utils/iggi/tri/: CMakeLists.txt  Makefile  bfill.c  ckmesh.c  dbase.c  dbase.h  flip.c  geom.c  geom.h  gn_asm.c  gn_func.c  gn_opt.c  hinit.c  laplace.c  list.c  list.h  main.c  matrix.c  meshio.c  opt.c  plot.c  score.c  tri.cat  tri.man  triang.c  tridata.c  triheur.c
src/utils/mosmesh/src/: CMakeLists.txt  Makefile  asciicalc.c  calc_junc.c  calcnode.c  calcratio.c  calcspacing.c  computesubstratetype.c  depl_width.c  dmax.c  dmin.c  doublenode.c  dump_info.c  eval.c  expr.h  generate_deck.c  getdefmosdope.c  getdefprofiles.c  getinfo.c  getmosdope.c  getprofiles.c  lexical.c  longMOSnodegen.c  mosmesh.c  mosmesh.cat  mosmesh.man  panic.c  parse.c  preal.c  read_deffloat.c  read_defreal.c  readfloat.c  readreal.c  reads3.f  reads3as.c  reduce.c  shortMOSnodegen.c  struct.h  user_man.troff  writeanaldoping.c  (+6 more)
(+237 files in other folders)
