ADD_LIBRARY(plotcap_gplot
al_dis18.c
al_tst18.c
get_txt.c
glexs.c
gp_alu12.c
gp_area.c
gp_clip.c
gp_fmp.c
gp_gmode.c
gp_gplot2.c
gp_gpmisc.c
gp_gpwork.c
gp_lines.c
gp_pdev.c
gp_pfil.c
gp_pix.c
gp_prast.c
#gp_rand.c
gp_setcap.c
gp_setup.c
gp_xform.c
#gt.c
mkuniq.c
pg_entok.c
pg_erset.c
pg_pgetent.c
pg_pgetflag.c
pg_pgetnum.c
pg_pgetprg.c
pg_pgetstr.c
#pt.c
px_stab.c
)

